test/errors/parsing/invalidimplements.chpl
domain implements hashable;
none implements hashable;
this implements hashable;
false implements hashable;
true implements hashable;
index implements hashable;
